--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,5 +56,6 @@
     <string name="error_read_and_agree_checkbox"><![CDATA[Read & Agree the checkbox]]></string>
     <string name="enter_valid_input">Enter valid input</string>
     <string name="check_internet">Please check your internet connection!</string>
+    <string name="several_websites_not_reachable">Several Websites are not reachable!</string>
     <string name="action_refresh_title">Refresh</string>
 </resources>
