--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,7 @@
     <string name="enter_valid_input">Enter valid input</string>
     <string name="check_internet">Please check your internet connection!</string>
     <string name="several_websites_not_reachable">Several Websites are not reachable!</string>
+    <string name="something_went_wrong">Something went wrong</string>
     <string name="action_refresh_title">Refresh</string>
     <string name="enable_dark_mode">Enable dark mode</string>
     <string name="disable_dark_mode">Disable dark mode</string>
